tests/type_errors/sum_func_string.nos
# expect_error: type mismatch
main() = sum(["a", "b", "c"])
